--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,43 +1,11 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-body {
-    font-family: Arial, sans-serif;
-    line-height: 1.6;
-}
-
-.container {
-    max-width: 1200px;
-    margin: 0 auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 20px;
-    justify-content: center;
-}
-
-h1 {
+.container > h1 {
     text-align: center;
-    margin-bottom: 20px;
+    margin : 2rem 0
 }
 
-.card-container {
-    display: grid;
+.container > .card-container {
     display: flex;
-    flex-direction: row;
+    gap: 1rem;
+    flex-wrap: wrap;
     justify-content: center;
-    align-items: center;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-    gap: 100px;
 }
-
-app-card1, app-card2, app-card3 {
-    padding: 20px;
-    border-radius: 8px;
-    
-}
-
