--- a/src/app/card2/card2.component.css
+++ b/src/app/card2/card2.component.css
@@ -1,3 +1,7 @@
+.card{
+    overflow-x: hidden;
+}
+
 .card-link{
     text-decoration: none;
     color: black;
@@ -8,4 +12,5 @@
 .card:hover{
     transform: scale(1.05);
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-}   
+}
+
