--- a/src/app/card3/card3.component.css
+++ b/src/app/card3/card3.component.css
@@ -1,3 +1,7 @@
+.card{
+    overflow-x: hidden;
+}
+
 .card-link{
     text-decoration: none;
     color: black;
@@ -5,15 +9,7 @@
     justify-content: center;
 }
 
-
-
 .card:hover{
     transform: scale(1.05);
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-}
-
-.button{
-    width: 100%;
-    height: 41.5px;
-    background-color: rebeccapurple;
 }
